[gd_scene load_steps=23 format=2]

[ext_resource path="res://characters/EncounterCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/EncounterHero.gd" type="Script" id=2]
[ext_resource path="res://menu/fonts/normal_font.tres" type="FontFile" id=3]
[ext_resource path="res://characters/super_note.png" type="Texture2D" id=4]
[ext_resource path="res://menu/icons/talk.png" type="Texture2D" id=5]
[ext_resource path="res://menu/icons/item.png" type="Texture2D" id=6]
[ext_resource path="res://menu/icons/trumpet.png" type="Texture2D" id=7]
[ext_resource path="res://menu/icons/sheet.png" type="Texture2D" id=8]
[ext_resource path="res://characters/ActionChoice.gd" type="Script" id=9]
[ext_resource path="res://menu/unshaded.material" type="Material" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "choose"
length = 0.5
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.125, 0.25, 0.375 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=9]
resource_name = "choose_dead"
length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=8]
resource_name = "dead"
length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 15, 16 ]
}

[sub_resource type="Animation" id=7]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 5, -12 ), Vector2( -5, -12 ), Vector2( 3, -12 ), Vector2( -3, -12 ), Vector2( 2, -12 ), Vector2( -2, -12 ), Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "heal"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.4, 0.8 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 0, -16 ), Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, -12 ), Vector2( -3, -12 ), Vector2( 2, -12 ), Vector2( -2, -12 ), Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.5
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.125, 0.25, 0.375 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "play"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=12]
resource_name = "victory"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Gradient" id=10]
interpolation_mode = 1
offsets = PackedFloat32Array( 0, 0.865772, 1 )
colors = PackedColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=11]
gradient = SubResource( 10 )
width = 32
height = 32
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.5, 0 )

[node name="EncounterHero" groups=["hero_alive"] instance=ExtResource( 1 )]
script = ExtResource( 2 )
actor_name = "Super Note"
max_vibe = 20
vibe = 20

[node name="Sprite2D" type="Sprite2D" parent="." index="0"]
texture = ExtResource( 4 )
offset = Vector2( 0, -12 )
hframes = 5
vframes = 10

[node name="Anim" type="AnimationPlayer" parent="." index="3"]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/choose = SubResource( 6 )
anims/choose_dead = SubResource( 9 )
anims/dead = SubResource( 8 )
anims/die = SubResource( 7 )
anims/heal = SubResource( 4 )
anims/hurt = SubResource( 3 )
anims/idle = SubResource( 2 )
anims/play = SubResource( 5 )
anims/victory = SubResource( 12 )

[node name="HUD" type="CanvasLayer" parent="." index="4"]
follow_viewport_enabled = true

[node name="ActionChoice" type="Control" parent="HUD" index="0"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -256.0
offset_bottom = -144.0
script = ExtResource( 9 )

[node name="Panel" type="PanelContainer" parent="HUD/ActionChoice" index="0"]
offset_left = 16.0
offset_top = -24.0
offset_right = 80.0
offset_bottom = -4.0

[node name="Actions" type="VBoxContainer" parent="HUD/ActionChoice/Panel" index="0"]
offset_left = 4.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 48.0
size_flags_vertical = 4

[node name="Play" type="Button" parent="HUD/ActionChoice/Panel/Actions" index="0"]
offset_right = 56.0
offset_bottom = 12.0
focus_neighbor_top = NodePath("../Item")
custom_fonts/font = ExtResource( 3 )
text = "Play"
icon = ExtResource( 7 )
align = 2

[node name="Talk" type="Button" parent="HUD/ActionChoice/Panel/Actions" index="1"]
offset_top = 16.0
offset_right = 56.0
offset_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Act"
icon = ExtResource( 5 )
align = 2

[node name="Item" type="Button" parent="HUD/ActionChoice/Panel/Actions" index="2"]
offset_top = 32.0
offset_right = 56.0
offset_bottom = 44.0
focus_neighbor_bottom = NodePath("../Play")
custom_fonts/font = ExtResource( 3 )
text = "Items"
icon = ExtResource( 6 )
align = 2

[node name="Tail" type="Polygon2D" parent="HUD/ActionChoice/Panel" index="1"]
position = Vector2( 0, -3 )
color = Color( 0, 0, 0, 1 )
polygon = PackedVector2Array( 0, 12, -4, 16, 0, 20 )

[node name="PlayChoice" type="PanelContainer" parent="HUD/ActionChoice" index="1"]
visible = false
offset_left = 84.0
offset_top = -32.0
offset_right = 178.0
offset_bottom = 4.0

[node name="Plays" type="VBoxContainer" parent="HUD/ActionChoice/PlayChoice" index="0"]
offset_left = 4.0
offset_top = 4.0
offset_right = 90.0
offset_bottom = 32.0

[node name="SoloImpro" type="Button" parent="HUD/ActionChoice/PlayChoice/Plays" index="0"]
offset_right = 86.0
offset_bottom = 12.0
text = "Solo Impro"
icon = ExtResource( 7 )
align = 2

[node name="Song" type="Button" parent="HUD/ActionChoice/PlayChoice/Plays" index="1"]
offset_top = 16.0
offset_right = 86.0
offset_bottom = 28.0
text = "FunkyTime"
icon = ExtResource( 8 )
align = 2

[node name="Tail" type="Polygon2D" parent="HUD/ActionChoice/PlayChoice" index="1"]
position = Vector2( 0, -3 )
color = Color( 0, 0, 0, 1 )
polygon = PackedVector2Array( 0, 12, -4, 16, 0, 20 )

[node name="ActChoice" type="PanelContainer" parent="HUD/ActionChoice" index="2"]
visible = false
offset_left = 84.0
offset_top = -12.0
offset_right = 156.0
offset_bottom = 8.0

[node name="Actions" type="VBoxContainer" parent="HUD/ActionChoice/ActChoice" index="0"]
offset_left = 4.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 31.0

[node name="Check" type="Button" parent="HUD/ActionChoice/ActChoice/Actions" index="0"]
offset_right = 64.0
offset_bottom = 11.0
text = "Check"
align = 2

[node name="Scare" type="Button" parent="HUD/ActionChoice/ActChoice/Actions" index="1"]
offset_top = 15.0
offset_right = 64.0
offset_bottom = 27.0
text = "Scare"
icon = ExtResource( 5 )
align = 2

[node name="Tail" type="Polygon2D" parent="HUD/ActionChoice/ActChoice" index="1"]
position = Vector2( 0, -3 )
color = Color( 0, 0, 0, 1 )
polygon = PackedVector2Array( 0, 12, -4, 16, 0, 20 )

[node name="Inventory" type="PanelContainer" parent="HUD/ActionChoice" index="3"]
visible = false
offset_left = 84.0
offset_top = 3.0
offset_right = 171.0
offset_bottom = 23.0

[node name="Items" type="VBoxContainer" parent="HUD/ActionChoice/Inventory" index="0"]
offset_left = 4.0
offset_top = 4.0
offset_right = 83.0
offset_bottom = 16.0

[node name="Template" type="Button" parent="HUD/ActionChoice/Inventory/Items" index="0"]
visible = false
offset_right = 79.0
offset_bottom = 12.0
text = "CoolPotion"
icon = ExtResource( 6 )
align = 2

[node name="Tail" type="Polygon2D" parent="HUD/ActionChoice/Inventory" index="1"]
position = Vector2( 0, -3 )
color = Color( 0, 0, 0, 1 )
polygon = PackedVector2Array( 0, 12, -4, 16, 0, 20 )

[node name="BackPanel" type="PanelContainer" parent="HUD" index="1"]
visible = false
offset_left = 96.0
offset_top = 128.0
offset_right = 160.0
offset_bottom = 147.0

[node name="Back" type="Button" parent="HUD/BackPanel" index="0"]
offset_left = 4.0
offset_top = 4.0
offset_right = 60.0
offset_bottom = 15.0
text = "Back"

[node name="Info" type="Label" parent="HUD" index="2"]
offset_left = 8.0
offset_top = 88.0
offset_right = 88.0
offset_bottom = 136.0
valign = 2
autowrap = true

[node name="Selectable" type="Sprite2D" parent="." index="5"]
visible = false
material = ExtResource( 10 )
z_index = 200
texture = SubResource( 11 )
offset = Vector2( 0, -8 )

[node name="Label" type="Label" parent="Selectable" index="0"]
use_parent_material = true
offset_left = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
text = "e"
align = 1
valign = 1

[node name="Button" type="Button" parent="Selectable" index="1"]
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = 8.0
text = "  "

[node name="Selectables" type="Node2D" parent="." index="6"]

[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="visibility_changed" from="HUD/ActionChoice" to="HUD/ActionChoice" method="_on_ActionChoice_visibility_changed"]
[connection signal="pressed" from="HUD/ActionChoice/Panel/Actions/Play" to="HUD/ActionChoice" method="_on_Play_pressed"]
[connection signal="pressed" from="HUD/ActionChoice/Panel/Actions/Talk" to="HUD/ActionChoice" method="_on_Talk_pressed"]
[connection signal="pressed" from="HUD/ActionChoice/Panel/Actions/Item" to="HUD/ActionChoice" method="_on_Item_pressed"]
[connection signal="pressed" from="HUD/ActionChoice/PlayChoice/Plays/SoloImpro" to="." method="_on_SoloImpro_pressed"]
[connection signal="pressed" from="HUD/BackPanel/Back" to="." method="_on_Back_pressed"]
